add initial backend

--- a/backend/gradle.properties
+++ b/backend/gradle.properties
@@ -3,9 +3,9 @@
 
 org.gradle.configuration-cache=false
 
+# Quarkus properties
 quarkusPluginId=io.quarkus
 quarkusPluginVersion=3.24.5
 quarkusPlatformGroupId=io.quarkus.platform
 quarkusPlatformArtifactId=quarkus-bom
 quarkusPlatformVersion=3.24.5
-
