add reactive messaging

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-waver.llmprovider=OpenAI
+
+waver.llm-provider=OpenAI
 waver.project-name=MyAwesomeProject
 waver.output-path=./generated-docs
 waver.verbose=true
