changing to Async

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,10 +16,9 @@ waver.gemini.api-key=${GEMINI_AI_KEY}
 %dev.minio.secret-key=minioadmin
 %dev.minio.bucket-name=waver-bucket
 
+# give it some more time, based on local resources..
+quarkus.langchain4j.openai.timeout=180s
 
-# --- Container Image Build Configuration ---
-quarkus.native.container-build=true
-quarkus.container-image.group=your-repo
-quarkus.container-image.name=waver-processor
-quarkus.container-image.tag=1.0.0
-
+# Enable logging of both requests and responses
+quarkus.langchain4j.openai.log-requests=true
+quarkus.langchain4j.openai.log-responses=true
