--- a/waver-backend/src/main/resources/application.properties
+++ b/waver-backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 waver.llm-provider=OpenAI
 waver.project-name=MyAwesomeProject
-waver.output-path=./generated-docs
+waver.output-path=/Users/sshaaf/git/java/waver-site/src/data/generated
 waver.verbose=true
 waver.output-format=MARKDOWN
 
