--- a/.github/workflows/cli-build.yml
+++ b/.github/workflows/cli-build.yml
@@ -47,7 +47,7 @@ jobs:
           mvn dependency:tree -pl waver-cli
       
       - name: Build and Test with Maven
-        run: mvn clean verify -B -e
+        run: mvn clean compile package install
       
       - name: Debug Build (if needed)
         if: failure()
