--- a/.github/workflows/cli-build.yml
+++ b/.github/workflows/cli-build.yml
@@ -27,16 +27,17 @@ on:
 
 jobs:
   build:
+    environment: build
     name: Build and Test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       
-      - name: Set up JDK 21
+      - name: Set up GraalVM JDK 21
         uses: actions/setup-java@v3
         with:
           java-version: '21'
-          distribution: 'temurin'
+          distribution: 'graalvm'
           cache: maven
       
       - name: Build with Maven
