--- a/.github/workflows/cli-build.yml
+++ b/.github/workflows/cli-build.yml
@@ -30,28 +30,21 @@ jobs:
     environment: build
     name: Build and Test
     runs-on: ubuntu-latest
+    
     steps:
-      - uses: actions/checkout@v3
-      
-      - name: Set up GraalVM JDK 21
-        uses: actions/setup-java@v3
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
         with:
+          distribution: 'graalvm' # See 'Supported distributions' for available options
           java-version: '21'
-          distribution: 'graalvm'
-          cache: maven
-      
-      - name: Build with Maven
-        run: mvn clean install
-      
-      - name: Run tests
-        run: mvn test
-      
+      - run: mvn clean install
+      - run: mvn test
       - name: Upload JAR
         uses: actions/upload-artifact@v4
         with:
           name: waver-jar
           path: waver-cli/target/waver-cli-*.jar
-
+      
   native-linux:
     name: Build Native Linux
     needs: build
