--- a/waver-cli/pom.xml
+++ b/waver-cli/pom.xml
@@ -118,47 +118,7 @@
                 </executions>
             </plugin>
 
-            <!-- Native image plugin -->
-            <plugin>
-                <groupId>org.graalvm.buildtools</groupId>
-                <artifactId>native-maven-plugin</artifactId>
-                <version>0.10.2</version>
-                <extensions>true</extensions>
-                <executions>
-                    <execution>
-                        <id>build-native</id>
-                        <goals>
-                            <goal>build</goal>
-                        </goals>
-                        <phase>package</phase>
-                    </execution>
-                </executions>
-                <configuration>
-                    <classesDirectory>${project.build.outputDirectory}</classesDirectory>
-                    <metadataRepository>
-                        <enabled>false</enabled>
-                    </metadataRepository>
-                    <buildArgs>
-                        <buildArg>--initialize-at-build-time=dev.shaaf.waver</buildArg>
-                        <buildArg>--initialize-at-build-time=dev.langchain4j</buildArg>
-                        <buildArg>--initialize-at-build-time=com.fasterxml.jackson</buildArg>
-                        <buildArg>--initialize-at-build-time=org.slf4j</buildArg>
-                        <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.util.UriEncoder</buildArg>
-                        <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.events.ImplicitTuple</buildArg>
-                        <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.external.com.google.gdata.util.common.base.UnicodeEscaper</buildArg>
-                        <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.DumperOptions$ScalarStyle</buildArg>
-                        <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.nodes.Tag</buildArg>
-                        <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.external.com.google.gdata.util.common.base.PercentEscaper</buildArg>
-                        <buildArg>--initialize-at-run-time=io.netty</buildArg>
-                        <buildArg>--initialize-at-run-time=dev.langchain4j.internal.RetryUtils</buildArg>
-                        <buildArg>--no-fallback</buildArg>
-                        <buildArg>--enable-https</buildArg>
-                        <buildArg>--enable-url-protocols=https</buildArg>
-                        <buildArg>-H:+ReportExceptionStackTraces</buildArg>
-                        <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
-                    </buildArgs>
-                </configuration>
-            </plugin>
+
 
             <!-- Exec plugin for running the application -->
             <plugin>
@@ -171,4 +131,55 @@
             </plugin>
         </plugins>
     </build>
+
+    <profiles>
+        <profile>
+            <id>native</id>
+            <build>
+                <plugins>
+                    <!-- Native image plugin -->
+                    <plugin>
+                        <groupId>org.graalvm.buildtools</groupId>
+                        <artifactId>native-maven-plugin</artifactId>
+                        <version>0.10.2</version>
+                        <extensions>true</extensions>
+                        <executions>
+                            <execution>
+                                <id>build-native</id>
+                                <goals>
+                                    <goal>build</goal>
+                                </goals>
+                                <phase>package</phase>
+                            </execution>
+                        </executions>
+                        <configuration>
+                            <classesDirectory>${project.build.outputDirectory}</classesDirectory>
+                            <metadataRepository>
+                                <enabled>false</enabled>
+                            </metadataRepository>
+                            <buildArgs>
+                                <buildArg>--initialize-at-build-time=dev.shaaf.waver</buildArg>
+                                <buildArg>--initialize-at-build-time=dev.langchain4j</buildArg>
+                                <buildArg>--initialize-at-build-time=com.fasterxml.jackson</buildArg>
+                                <buildArg>--initialize-at-build-time=org.slf4j</buildArg>
+                                <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.util.UriEncoder</buildArg>
+                                <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.events.ImplicitTuple</buildArg>
+                                <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.external.com.google.gdata.util.common.base.UnicodeEscaper</buildArg>
+                                <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.DumperOptions$ScalarStyle</buildArg>
+                                <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.nodes.Tag</buildArg>
+                                <buildArg>--initialize-at-build-time=org.yaml.snakeyaml.external.com.google.gdata.util.common.base.PercentEscaper</buildArg>
+                                <buildArg>--initialize-at-run-time=io.netty</buildArg>
+                                <buildArg>--initialize-at-run-time=dev.langchain4j.internal.RetryUtils</buildArg>
+                                <buildArg>--no-fallback</buildArg>
+                                <buildArg>--enable-https</buildArg>
+                                <buildArg>--enable-url-protocols=https</buildArg>
+                                <buildArg>-H:+ReportExceptionStackTraces</buildArg>
+                                <buildArg>-H:+UnlockExperimentalVMOptions</buildArg>
+                            </buildArgs>
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 </project> 
