--- a/.github/workflows/site-build-and-push.yml
+++ b/.github/workflows/site-build-and-push.yml
@@ -47,8 +47,7 @@ jobs:
       with:
         context: ./waver-site
         push: true
-        tags: |
-          ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}
+        tags: ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}
         cache-from: type=gha
         cache-to: type=gha,mode=max
         platforms: linux/amd64,linux/arm64
