--- a/.github/workflows/site-build-and-push.yml
+++ b/.github/workflows/site-build-and-push.yml
@@ -47,15 +47,20 @@ jobs:
       with:
         context: ./waver-site
         push: true
-        tags: ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}
-        cache-from: type=gha
-        cache-to: type=gha,mode=max
+        tags: |
+          ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}
+          ${{ env.QUAY_REPOSITORY }}:latest
+        cache-from: type:gha
+        cache-to: type:gha,mode=max
         platforms: linux/amd64,linux/arm64
 
     - name: Output image info
       run: |
         echo "✅ Successfully built and pushed image:"
         echo "   Repository: ${{ env.QUAY_REPOSITORY }}"
-        echo "   Tag: ${{ steps.git-sha.outputs.sha }}"
+        echo "   SHA Tag: ${{ steps.git-sha.outputs.sha }}"
+        echo "   Latest Tag: latest"
         echo "   Full SHA: ${{ steps.git-sha.outputs.full-sha }}"
-        echo "   Image URL: ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}"
+        echo "   Image URLs:"
+        echo "     ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}"
+        echo "     ${{ env.QUAY_REPOSITORY }}:latest"
