--- a/waver-backend/src/main/resources/application.properties
+++ b/waver-backend/src/main/resources/application.properties
@@ -14,3 +14,13 @@ waver.gemini.api-key=${GEMINI_AI_KEY}
 %dev.minio.access-key=minioadmin
 %dev.minio.secret-key=minioadmin
 %dev.minio.bucket-name=waver-bucket
+
+# --- Quay.io Image Configuration for waver-site ---
+# The container registry
+quarkus.container-image.registry=quay.io
+
+# Your Quay.io username or organization
+quarkus.container-image.group=sshaaf
+
+# The name of your image repository
+quarkus.container-image.name=waver-site
