--- a/.github/workflows/backend-build-and-push.yml
+++ b/.github/workflows/backend-build-and-push.yml
@@ -34,6 +34,9 @@ jobs:
   build-and-push:
     environment: build
     runs-on: ubuntu-latest
+    permissions:
+      contents: read # Read permissions for checkout
+      packages: write # Write permissions for pushing packages
     
     steps:
     - name: Checkout code
@@ -44,14 +47,14 @@ jobs:
       with:
         java-version: '21'
         distribution: 'temurin'
-        cache: maven
-    - run: mvn clean install
 
-    - name: Get Git SHA
-      id: git-sha
-      run: |
-        echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-        echo "full-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+    - name: Cache Maven packages
+      uses: actions/cache@v4
+      with:
+        path: ~/.m2/repository
+        key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+        restore-keys: |
+          ${{ runner.os }}-maven-
 
     - name: Log in to Quay.io
       uses: docker/login-action@v3
@@ -60,27 +63,11 @@ jobs:
         username: ${{ secrets.QUAY_USERNAME }}
         password: ${{ secrets.QUAY_PASSWORD }}
 
-    - name: Build and push Docker image
+    - name: Build and Push Container Image
       run: |
-        # Build and push with SHA tag
-        mvn clean package -pl waver-backend -Dquarkus.container-image.build=true \
+        mvn clean package -pl waver-backend \
+          -Dquarkus.container-image.build=true \
           -Dquarkus.container-image.push=true \
-          -Dquarkus.container-image.registry=quay.io \
-          -Dquarkus.container-image.group=${{ env.QUAY_NAMESPACE }} \
-          -Dquarkus.container-image.name=${{ env.IMAGE_NAME }} \
-          -Dquarkus.container-image.tag=${{ steps.git-sha.outputs.sha }}
-        
-        # Also tag and push as latest
-        docker tag ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }} ${{ env.QUAY_REPOSITORY }}:latest
-        docker push ${{ env.QUAY_REPOSITORY }}:latest
+          -Dquarkus.container-image.tag=${GITHUB_SHA::8} \
+          -Dquarkus.container-image.additional-tags=latest
 
-    - name: Output image info
-      run: |
-        echo "✅ Successfully built and pushed image:"
-        echo "   Repository: ${{ env.QUAY_REPOSITORY }}"
-        echo "   SHA Tag: ${{ steps.git-sha.outputs.sha }}"
-        echo "   Latest Tag: latest"
-        echo "   Full SHA: ${{ steps.git-sha.outputs.full-sha }}"
-        echo "   Image URLs:"
-        echo "     ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}"
-        echo "     ${{ env.QUAY_REPOSITORY }}:latest"
