--- a/.github/workflows/site-build-and-push.yml
+++ b/.github/workflows/site-build-and-push.yml
@@ -1,6 +1,12 @@
 name: Build and Push site
 
 on:
+  push:
+    branches: [ main ]
+    # Only run if files inside 'waver-site' directory changed
+    paths:
+      - 'waver-site/**'
+
   workflow_dispatch:
 
 # Define an environment variable for the image name to keep the workflow clean
