--- a/.github/workflows/site-build-and-push.yml
+++ b/.github/workflows/site-build-and-push.yml
@@ -1,15 +1,18 @@
 name: Build and Push site
 
+# This workflow now runs on pushes to 'main' AND on pull requests targeting 'main'.
 on:
   push:
     branches: [ main ]
-    # Only run if files inside 'waver-site' directory changed
+    paths:
+      - 'waver-site/**'
+  pull_request:
+    branches: [ main ]
     paths:
       - 'waver-site/**'
 
   workflow_dispatch:
 
-# Define an environment variable for the image name to keep the workflow clean
 env:
   IMAGE_NAME: quay.io/sshaaf/waver-site
 
@@ -25,6 +28,8 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Log in to Quay.io
+        # We log in for both events, but only push on a 'push' event.
+        # This is safe and simpler than conditionally logging in.
         uses: docker/login-action@v3
         with:
           registry: quay.io
@@ -36,19 +41,29 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.IMAGE_NAME }}
-          # Creates tags like:
-          # - type=sha,prefix=,format=short (e.g., a1b2c3d4)
-          # - type=raw,value=latest,enable={{is_default_branch}} (e.g., latest for main branch)
           tags: |
             type=sha,format=short
             type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build and push Docker image
+      # This step ONLY runs for pull requests. It builds the image but does NOT push.
+      - name: Build Docker image for PR
+        if: github.event_name == 'pull_request'
         uses: docker/build-push-action@v5
         with:
-          # The context is the subfolder containing the Dockerfile
           context: ./waver-site
-          push: true
+          push: false # <<< CRITICAL: push is set to false
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
+
+      # This step ONLY runs on a push to the main branch. It builds AND pushes.
+      - name: Build and Push Docker image
+        if: github.event_name == 'push'
+        uses: docker/build-push-action@v5
+        with:
+          context: ./waver-site
+          push: true # <<< CRITICAL: push is set to true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
           cache-from: type=gha
