--- a/waver-backend/src/main/resources/application.properties
+++ b/waver-backend/src/main/resources/application.properties
@@ -15,9 +15,12 @@ waver.gemini.api-key=${GEMINI_AI_KEY}
 %dev.minio.secret-key=minioadmin
 %dev.minio.bucket-name=waver-bucket
 
-# give it some more time, based on local resources..
-quarkus.langchain4j.openai.timeout=180s
+# --- Quay.io Image Configuration for waver-site ---
+# The container registry
+quarkus.container-image.registry=quay.io
 
-# Enable logging of both requests and responses
-quarkus.langchain4j.openai.log-requests=true
-quarkus.langchain4j.openai.log-responses=true
+# Your Quay.io username or organization
+quarkus.container-image.group=sshaaf
+
+# The name of your image repository
+quarkus.container-image.name=waver-site
