--- a/.github/workflows/backend-build-and-push.yml
+++ b/.github/workflows/backend-build-and-push.yml
@@ -2,71 +2,72 @@ name: Build and Push Backend
 
 on:
   push:
-    branches: [ main, develop ]
-    paths:
-      - 'waver-backend/**'
+    branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - '**.png'
+      - '**.jpg'
   pull_request:
-    branches: [ main, develop ]
-    paths:
-      - 'waver-backend/**'
+    branches: [ main ]
+    paths-ignore:
+      - '**.md'
+      - '**.png'
+      - '**.jpg'
+  workflow_dispatch:
 
 env:
-  QUAY_NAMESPACE: sshaaf
-  IMAGE_NAME: waver-backend
   QUAY_REPOSITORY: quay.io/sshaaf/waver-backend
 
 jobs:
   build-and-push:
     environment: build
     runs-on: ubuntu-latest
-    
+    permissions:
+      contents: read
+      packages: write
+
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - run: mvn clean install
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - run: mvn -B install
 
-    - name: Get Git SHA
-      id: git-sha
-      run: |
-        echo "sha=$(git rev-parse --short HEAD)" >> $GITHUB_OUTPUT
-        echo "full-sha=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
+      - name: Cache Maven packages
+        uses: actions/cache@v4
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-backend-${{ hashFiles('**/pom.xml') }}
+          restore-keys: |
+            ${{ runner.os }}-maven-backend-
 
-    - name: Log in to Quay.io
-      uses: docker/login-action@v3
-      with:
-        registry: quay.io
-        username: ${{ secrets.QUAY_USERNAME }}
-        password: ${{ secrets.QUAY_PASSWORD }}
+      - name: Log in to Quay.io
+        # This step is safe to run for both events.
+        uses: docker/login-action@v3
+        with:
+          registry: quay.io
+          username: ${{ secrets.QUAY_USERNAME }}
+          password: ${{ secrets.QUAY_PASSWORD }}
 
-    - name: Build and push Docker image
-      run: |
-        cd waver-backend
-        # Build and push with SHA tag
-        mvn clean package -Dquarkus.container-image.build=true \
-          -Dquarkus.container-image.push=true \
-          -Dquarkus.container-image.registry=quay.io \
-          -Dquarkus.container-image.group=${{ env.QUAY_NAMESPACE }} \
-          -Dquarkus.container-image.name=${{ env.IMAGE_NAME }} \
-          -Dquarkus.container-image.tag=${{ steps.git-sha.outputs.sha }}
-        
-        # Also tag and push as latest
-        docker tag ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }} ${{ env.QUAY_REPOSITORY }}:latest
-        docker push ${{ env.QUAY_REPOSITORY }}:latest
+      - name: Build Container Image (PR Check)
+        # This step ONLY runs for pull requests. It builds the image but does NOT push.
+        if: github.event_name == 'pull_request'
+        run: |
+          mvn package -pl waver-backend \
+            -Dquarkus.container-image.build=true \
+            -Dquarkus.container-image.push=false \
+            -Dquarkus.container-image.tag=${{ github.sha }}
 
-    - name: Output image info
-      run: |
-        echo "✅ Successfully built and pushed image:"
-        echo "   Repository: ${{ env.QUAY_REPOSITORY }}"
-        echo "   SHA Tag: ${{ steps.git-sha.outputs.sha }}"
-        echo "   Latest Tag: latest"
-        echo "   Full SHA: ${{ steps.git-sha.outputs.full-sha }}"
-        echo "   Image URLs:"
-        echo "     ${{ env.QUAY_REPOSITORY }}:${{ steps.git-sha.outputs.sha }}"
-        echo "     ${{ env.QUAY_REPOSITORY }}:latest"
+      - name: Build and Push Container Image (on Merge to Main)
+        # This step ONLY runs on a push to the main branch. It builds AND pushes.
+        if: github.event_name == 'push'
+        run: |
+          mvn package -pl waver-backend  \
+            -Dquarkus.container-image.build=true \
+            -Dquarkus.container-image.push=true \
+            -Dquarkus.container-image.tag=${GITHUB_SHA::8} \
+            -Dquarkus.container-image.additional-tags=latest
